[package]
name = "jsondiff"
description = "A tool for outputs semantic difference of json"
readme = "readme.md"
version = "0.2.1"
authors = ["niboshi(mpppk)", "Delt4Nin3"]
edition = "2024"
license = "MIT"
repository = "https://github.com/Delt4Nin3/jsondiff"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "json"]

[lib]
name = "jsondiff"
path = "src/lib.rs"

[[bin]]
name = "jsondiff"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "3"
serde_json = "1.0"
similar = "2.7.0"